Blender crashes after selecting any object in outliner hierarchy (using statistics overlay) #92246
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#92246
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows 10
Graphics card: Asus Radeon R7 360
Blender Version
Broken: (2.93LTS , 3.00Alpha)
Short description of error
.blend file tested on PC and laptop. On laptop opening blend file causes immediate crash while on PC crash happens after I ALT + left click on lower torso part of my character (chest/rib part). Same blend file causes different error on PC and on laptop (both errors also embedded in this post).
I've tested my blend file also with latest alpha 3.00 blender and it also crashes.
UPDATE
I've found out that bug happens because I'm using statistic overlay if I turn it off there is no problem selecting objects on a model.
So apparently statistic overlay is crashing blender after sculpting and remeshing the object.
Exact steps for others to reproduce the error
Second time:
OgreGruntSculpt1.blend
system-info.txt
OgreGruntSculpt PC.crash.txt
OgreGruntSculpt laptop.crash.txt
blender powershell using factory startup debug all.txt
Added subscriber: @tomek320
Blender crashes after switching to chest/ribs part of torso using ALT + left clickto Blender crashes after selecting any object in outliner hierarchyBlender crashes after selecting any object in outliner hierarchyto Blender crashes after selecting any object in outliner hierarchy (using statistics overlay)Added subscriber: @lichtwerk
Changed status from 'Needs Triage' to: 'Confirmed'
Can confirm, will check
This issue was referenced by
5a5788ace2
This issue was referenced by
0071001879
Changed status from 'Confirmed' to: 'Resolved'